--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
   <div class="container text-center">
     <h1>Pomodoro Clock</h1>
-    <div class="time">
+    <div class="sessionDiv">
       <h2>Session time</h2>
-      <a role="button" class="btn btn-primary" id="add5Clock">+</a>
-      <h3 id="num">5</h3>
       <a role="button" class="btn btn-primary" id="minus5Clock">-</a>
+      <h3 id="num">5</h3>
+      <a role="button" class="btn btn-primary" id="plus5Clock">+</a>
       <a role="button" class="btn btn-primary" id="reset">Reset</a>
     </div>
-    <div id="breakDiv">
+    <div class="breakDiv">
       <h2>Break time</h2>
-      <a role="button" class="btn btn-primary" id="add5Break">+</a>
-      <h3 id="breakNum">5</h3>
       <a role="button" class="btn btn-primary" id="minus5Break">-</a>
+      <h3 id="breakNum">5</h3>
+      <a role="button" class="btn btn-primary" id="add5Break">+</a>
     </div>
     <a role="button" class="btn btn-primary" id="start">Start</a>
 
