--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 
 <body>
   <div class="container text-center">
-    <h1>Pomodoro Clock</h1>
-    <div class="sessionDiv">
-      <h2>Session time</h2>
-      <a role="button" class="btn btn-primary" id="minus5Clock">-</a>
-      <h3 id="num">5</h3>
-      <a role="button" class="btn btn-primary" id="plus5Clock">+</a>
-      <a role="button" class="btn btn-primary" id="reset">Reset</a>
-    </div>
-    <div class="breakDiv">
-      <h2>Break time</h2>
-      <a role="button" class="btn btn-primary" id="minus5Break">-</a>
-      <h3 id="breakNum">5</h3>
-      <a role="button" class="btn btn-primary" id="add5Break">+</a>
-    </div>
-    <a role="button" class="btn btn-primary" id="start">Start</a>
-
+    <section class="main">
+      <h1>Pomodoro Clock</h1>
+      <div class="sessionDiv">
+        <h2>Session time</h2>
+        <a role="button" class="btn btn-primary" id="minus5Clock">-</a>
+        <h3 id="num">5</h3>
+        <a role="button" class="btn btn-primary" id="plus5Clock">+</a>
+        <a role="button" class="btn btn-primary" id="reset">Reset</a>
+      </div>
+      <div class="breakDiv">
+        <h2>Break time</h2>
+        <a role="button" class="btn btn-primary" id="minus5Break">-</a>
+        <h3 id="breakNum">5</h3>
+        <a role="button" class="btn btn-primary" id="add5Break">+</a>
+      </div>
+      <a role="button" class="btn btn-primary" id="start">Start</a>
+    </section>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
