Add logic - clock counting down

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <section class="main">
       <h1>Pomodoro Clock</h1>
       <div class="sessionDiv">
-        <h2>Session time</h2>
+        <h2 class="sessionTitle">Session time</h2>
         <a role="button" class="btn btn-primary" id="minus5Clock">-</a>
         <h3 id="num">5</h3>
         <a role="button" class="btn btn-primary" id="plus5Clock">+</a>
-        <a role="button" class="btn btn-primary" id="reset">Reset</a>
       </div>
       <div class="breakDiv">
-        <h2>Break time</h2>
+        <h2 id="breakTitle">Break time</h2>
         <a role="button" class="btn btn-primary" id="minus5Break">-</a>
         <h3 id="breakNum">5</h3>
         <a role="button" class="btn btn-primary" id="add5Break">+</a>
       </div>
       <a role="button" class="btn btn-primary" id="start">Start</a>
+      <a role="button" class="btn btn-primary" id="reset">Reset</a>
     </section>
   </div>
 
